package com.peppayi.designpattern.headfirst.chapters.chapter01.duck.fly;

public interface FlyBehavior {

    void fly();
}
